???? 0.9.12

28/5/2014 0.9.11   Shai Shasag <shai@waves.com>
    user visible changes, client:
    * Fixed a problem where index.yaml would not be copied to bookkeeping when syncing to DOK.
    
    programmer visible changes:
    * Copy tools got a new method copy_file_to_file.
    
27/5/2014 0.9.10   Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Removed redundant echo during copy.
    * Fixed: set-exec was not called or caled using the wrong have-info-map file if command was synccopy.

    user visible changes, admin:
    * wtar command: removed previously wtar files if tarring should be preformed.

13/5/2014 0.9.9   Shai Shasag <shai@waves.com>

    user visible changes, client:
    * New line after each folder in copy operations.
    * No redundant cd to folder that has not actions for non copying items.
    * When unwtaring, if .done exists it's date compared to the target file.
    * Compilation time and compiling machine displayed as part of version

    user visible changes, admin:
    * wtar command checks if tared files should be executable and adjust. it's permissions.
    * stage2svn & wtar commands use chflags -R nouchg to remove the Lock flag that might be on files copied from smb server.
    * Changed options for fix-symlinks command, instead of --folder, the folder will be taken from the STAGING_FOLDER given in the --config-file option. Also --svn was deleted as it was never used.
    * wtar command: before wtaring, check and fix permissions for all that is being tarred.

    programmer visible changes:
    * New method InstlItem.all_action_list, returns a list of all actions for an item (before, after, folder_in, folder_out, copy_in, copy_out) intended so the total number of actions for item can be known.
    * New methods for InstlAdmin: is_file_exec, should_file_be_exec to deal with executable bits in the staging folder.