@@ -1,5 +1,8 @@
 ???? 0.9.12
 
+    user visible changes, admin:
+    * Added option to limit stage2svn to specific folders, to save time.
+
 28/5/2014 0.9.11   Shai Shasag <shai@waves.com>
     user visible changes, client:
     * Fixed a problem where index.yaml would not be copied to bookkeeping when syncing to DOK.
